# Properties

./: CMakeLists.txt  README.md
Properties/: CMakeLists.txt  Properties.cpp  Properties.h  Property.hpp  Samples.cpp  Tests.cpp
include/: Property.hpp
samples/: CMakeLists.txt  Samples.cpp
tests/: CMakeLists.txt  Tests.cpp
